# BeeOptimal

./: .gitignore  .readthedocs.yaml  README.md  analysis_initialization.py  analysis_mutation.ipynb  analysis_mutation.py  analysis_nbees.py  animated_optimization.ipynb  main.py  optimization_report.py  pyproject.toml  setup.py  simulations.ipynb  test.ipynb  test.py
ABC/: abc.py  bee.py
analysis/: analysis_boxplots.py  analysis_colony_size.py  analysis_diversity.py  analysis_initialization.py  analysis_mutation.py  analysis_mutation_rate.py  analysis_nbees.py  diversity_report.py  image_reconstruction.py  optimization_gif.py  optimization_report.py
analysis/opt_report/: report_StandardABC.csv  report_VariantsABC.csv
analysis/simulations/: diversity_report.csv  opt_report_full.csv  opt_report_full_stagnation.csv  opt_report_stats.csv  opt_report_stats_stagnation.csv
beeoptimal/: __init__.py  abc.py  bee.py  benchmarks.py  plots.py  plotting.py
beeoptimal/abc/: __init__.py  abc_cls.py  bee_cls.py
beeoptimal/benchmarks/: __init__.py  benchmark_cls.py  benchmark_funcs.py
beeoptimal/visualization/: __init__.py  plotting.py
benchmark/: __init__.py  functions.py
docs/: requirements.txt
docs/source/: abc.rst  about.rst  bee.rst  benchmarks.rst  conf.py  index.rst  installation.rst  plotting.rst  references.rst
docs/source/_static/: style.css
docs/source/examples/: tutorial1.ipynb
docs/source/tutorials/: tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb  tutorial5.ipynb
tutorials/: tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb  tutorial5.ipynb
utils/: benchmark.py  functions.py  plotting_utils.py  test_functions.py
