#------------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
#------------------------------------------------------------------------------------------
[project]
name            = "beeoptimal"
version         = "0.1.0"
license         = {file = "LICENSE"}
description     = "A Python implementation of the Artificial Bee Colony (ABC) optimization algorithm"
keywords        = ["metahueristic", "optimization", "artificial bee colony", "swarm intelligence"]
readme          = "README.md"
authors         = [{ name = "Giulio Fantuzzi", email = "giulio.fantuzzi01@gmail.com" }]
requires-python = ">=3.12.1"
dependencies    = []
classifiers     = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
#------------------------------------------------------------------------------------------
[project.optional-dependencies]
docs = ["sphinx"]
#------------------------------------------------------------------------------------------
[project.urls]
Documentation = "https://readthedocs.org"
Repository    = "https://github.com/giuliofantuzzi/BeeOptimal"
Issues        = "https://github.com/giuliofantuzzi/BeeOptimal/issues"
#------------------------------------------------------------------------------------------
[tool.setuptools.packages]
find = { include = ["beeoptimal"] }
#------------------------------------------------------------------------------------------
[tool.setuptools.package-data]
beeoptimal = ["package_assets/*.png"]
#------------------------------------------------------------------------------------------